--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "internal-ip": "^4.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
